--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class='main-content'>
     {{>header}}
+    <p>This site was created by Tim hart, it uses data from mapbox.com and DarkSky</p>
    <a href="./index.html"><img class='portrait' src="/img/Re-openinge.png" alt=""></a>
    </div>
    {{>footer}}
